upgrade code to use the debian package with open62541 v1.1.2

--- a/Open62541CppWrapper/CMakeLists.txt
+++ b/Open62541CppWrapper/CMakeLists.txt
@@ -1,9 +1,9 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 
-PROJECT(Open62541CppWrapper VERSION 1.1)
+PROJECT(Open62541CppWrapper VERSION 1.2)
 
 # find open62541 as the main dependency
-FIND_PACKAGE(open62541 1.0)
+FIND_PACKAGE(open62541 1.1)
 
 # collect header files
 FILE(GLOB HDRS ${PROJECT_SOURCE_DIR}/*.hh)
@@ -31,7 +31,7 @@ TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} INTERFACE
 )
 
 # add open62541 as library dependency and set further target properties
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} open62541 pthread)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} open62541::open62541 pthread)
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 14
 )
