--- a/.cproject
+++ b/.cproject
@@ -28,7 +28,7 @@
 									<listOptionValue builtIn="false" value="HAS_OPCUA"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.2139937381" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="/usr/local/include/open62541"/>
+									<listOptionValue builtIn="false" value="/usr/include/open62541"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.357160390" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
