--- a/Open62541CppWrapper/Open62541CppWrapperConfig.cmake.in
+++ b/Open62541CppWrapper/Open62541CppWrapperConfig.cmake.in
@@ -1,3 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
+include(CMakeFindDependencyMacro)
+find_dependency(open62541 1.1)
+
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/@EXPORT_NAME@.cmake")
